--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/Andreas-Schoenefeldt/SFCCAnalyser#readme",
   "dependencies": {
+    "async": "^3.2.2",
     "cheerio": "^1.0.0-rc.10",
     "inquirer": "^8.2.0"
   }
