--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "async": "^3.2.2",
     "cheerio": "^1.0.0-rc.10",
+    "fast-csv": "^4.3.6",
     "inquirer": "^8.2.0"
   }
 }
