--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "async": "^3.2.2",
     "cheerio": "^1.0.0-rc.10",
     "fast-csv": "^4.3.6",
+    "graceful-fs": "^4.2.10",
     "inquirer": "^8.2.0"
   }
 }
