--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cheerio": "^1.0.0-rc.10",
     "fast-csv": "^4.3.6",
     "graceful-fs": "^4.2.10",
-    "inquirer": "^8.2.0"
+    "inquirer": "^8.2.0",
+    "xml-stream": "^0.4.5"
   }
 }
